...
        style={styles.routeStepsHandle}
        onPress={hideInstructions}
      >
        <ChevronDown size={24} color="#1F1F24" strokeWidth={2.5} />
      </Pressable>
      <Pressable
        testID="route-steps-close-button"
        style={styles.routeStepsCloseButton}
        onPress={hideInstructions}
      >
        <X size={26} color="#1F1F24" strokeWidth={2.5} />
      </Pressable>

...
