# US-4.4: Manage Indoor Points of Interest and Navigation

appId: host.exp.Exponent

---
- setPermissions:
    permissions:
      location: inuse
- setLocation:
    latitude: 45.497092
    longitude: -73.5788
- runFlow:
    file: _launch-expo-go.yaml
- extendedWaitUntil:
    visible:
      id: "header-title"
    timeout: 45000
- tapOn: TO
- tapOn: H
- assertVisible: Go There
- tapOn: Go There
- assertVisible: "Room #"
- tapOn: "Room #"
- assertVisible: "0023"
- tapOn: "0023"
- tapOn: View Floor Plan
- tapOn:
    point: 42%,48%
- tapOn: Get Directions
- tapOn: Go
- assertVisible:
    id: indoor-directions-close
- tapOn:
    id: indoor-directions-close
- tapOn: "Room #"
- tapOn:
    point: 86%,75%
- tapOn:
    point: 86%,75%
- tapOn:
    point: 86%,75%
- tapOn:
    point: 86%,75%
- tapOn:
    point: 86%,92%
- tapOn: Show on-screen keyboard
- tapOn:
    text: H
    index: 1
- tapOn: ?123
- tapOn: "-"
- tapOn: "8"
- tapOn: "0"
- tapOn: "1"
- tapOn:
    point: 36%,32%
- tapOn:
    point: 32%,39%
- tapOn: Get Directions
- tapOn: Go
- assertVisible:
    id: indoor-directions-close
- tapOn:
    id: indoor-directions-close
